Nav link animated, desktop footer aligned and statistics fixed

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,13 @@ h1 {
     border: 1px solid var(--primary-color);
     border-radius: 1rem;
     padding: 0.25rem 1rem;
+    transition: all 0.3s ease-in;
+    animation: bounce 1s infinite alternate ease-in forwards 2s; 
+}
+
+.main-nav__item a:hover {
+    background-color: var(--primary-color);
+    color: white;
 }
 
 .wrapper {
@@ -112,19 +119,25 @@ h1 {
 .stat {
     margin: 4rem 0;
     padding: 0;
+    position: relative;
 }
 
 .stat-icon {
-    height: 1rem;
-    position: relative;
-    right: 20%;
+    height: 1.5rem;
+    position: absolute;
+    left: 29%;
 }
 
 .stat-value {
     font-size: 4rem;
     font-weight: 900;
-    padding: 0;
+    padding-top: 1.5rem;
     margin: 0;
+    margin-top: 0.5rem;
+}
+
+.stat-text {
+    opacity: 0.6;
 }
 
 .section {
@@ -238,7 +251,6 @@ h1 {
     display: flex;
     color: white;
     width: 8rem;
-    /* justify-content: space-between; */
     cursor: pointer;
 }
 
@@ -251,6 +263,19 @@ h1 {
 
 .social-icon:hover {
     opacity: 0.6;
+}
+
+@keyframes bounce {
+    from {
+        padding: 0.25rem 1rem;
+        box-shadow: 0px 0px;
+    }
+
+    to {
+        padding: 0.35rem 1.1rem;
+        box-shadow: 1px 2px 10px var(--neutral-1);
+    }
+
 }
 
 /* Desktop Styles */
@@ -268,6 +293,10 @@ h1 {
     .statistics {
         display: flex;
         justify-content: space-around;
+    }
+
+    .stat-icon {
+        left: 2%;
     }
 
     .section {
@@ -291,7 +320,11 @@ h1 {
 
    .footer {
        display: flex;
-       align-items: center;
+       align-items: top;
+   }
+
+   .footer-logo {
+        margin-top: 19.916px;
    }
 
    .newsletter {
